oxiplate-derive/tests/crates/unreachable/tests/broken/literal/char-missing.stderr
error: No character specified in the character literal
 --> tests/broken/literal/char-missing.rs:4:23
  |
4 | #[oxiplate_inline("{{ '' }}")]
  |                       ^^
